# creance

./: .dockerignore  .gcloudignore  .gitignore  Makefile  README.md  bunfig.toml  package.json
apps/console/: README.md  index.html  package.json  tsconfig.json
apps/dep-migrator/: README.md  migrate.ts  package.json
apps/doc-gardener/: Dockerfile  README.md  allowlist.test.ts  allowlist.ts  detectors.test.ts  detectors.ts  index.ts  k8s-job.yaml  opencode-session.ts  package.json  run.sh
charts/agent-os/: Chart.yaml  values.yaml
charts/inference-gateway/: Chart.yaml  values.yaml
charts/litellm-gateway/: Chart.yaml  values.yaml
charts/sandbox/: Chart.yaml  values.yaml
charts/tool-gateway/: Chart.yaml  values.yaml
deploy/aurora/: bootstrap.py  iam-bootstrap.sql
deploy/eks/: README.md  a2a-demo.yaml  agent-runtime.yaml  cluster.yaml  eks-full-values.yaml  eks-values.yaml  mocks.yaml  run.sh  tenant-cr.yaml
deploy/gcp-agent-engine/: README.md  cloudbuild.yaml  deploy.py
deploy/local/: README.md  a2a-multiagent-e2e.sh  a2a-multiagent.yaml  (+34 more)
docs/: agent-engine-service-comparison.md  agentcore-postures.md  agentcore-profile-flow.md  agentcore-service-comparison.md  architecture.md  costs.md  isolation.md  platform.md  primitives.md  resource-model.md  runtime.md  stack-slides.md  walkthrough-slides.md  walkthrough.md
infra/: cdk.context.json  cdk.json  package.json  tsconfig.json
infra-gcp/: Pulumi.dev.yaml  Pulumi.yaml  index.ts  package.json  tsconfig.json
platform/: README.md
services/inference-gateway/litellm/: .gitignore  Dockerfile  README.md  admission_hook.py  auth_hook.py  compat_hook.py  config.yaml  pyproject.toml
(+226 files in other folders)
