[project]
name = "agent-os-litellm-gateway"
version = "0.1.0"
description = "LiteLLM inference gateway + worst-case budget admission hook (ADR-0024/0025)"
requires-python = ">=3.11,<3.14"  # cap below 3.14 — LiteLLM proxy extras lack reliable 3.14 wheels yet
dependencies = [
    # Pin to a known-good 1.x: the CustomLogger async_pre/post_call_* hook signatures
    # have drifted across versions (see README validation caveats).
    "litellm[proxy]>=1.55,<2",
    "boto3>=1.34",
    "awscrt>=0.19",  # required by botocore's `aws login` credential provider (SSO/login profiles)
    "pyjwt[crypto]>=2.8",  # offline JWT verification in the custom_auth hook (M2)
    "psycopg[binary,pool]>=3.1",  # PostgresSpendStore — full-mode budget reserve (ADR-0023/0026)
]

[tool.uv]
# Not an installable package — just the proxy config + admission hook run in place.
package = false
